Fixed the spacing of sunburst chart

--- a/surveyed-papers/css/chartStyle.css
+++ b/surveyed-papers/css/chartStyle.css
@@ -17,7 +17,3 @@
 .selected {
   fill: red;
 }
-
-text {
-  font-size: 20px;
-}
